manifests/jira/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jira
  name: jira
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
        - name: jira
          image: latlassian/jira-software:9.3.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
