manifests/jira/postgres_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira-postgres
  labels:
    app: jira-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jira-postgres
  template:
    metadata:
      labels:
        app: jira-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:9.6
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: jira-postgres-pv
      volumes:
        - name: jira-postgres-pv
          emptyDir: {}
          # persistentVolumeClaim:
          #   claimName: jira-postgres-pvc
