manifests/jira/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-postgres
  labels:
    app: jira-postgres
spec:
  type: ClusterIP
  ports:
   – port: 5432
  selector:
   app: jira-postgres
