manifests/jira/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
  labels:
    app: jira
spec:
  type: NodePort
  ports:
   – port: 8080
     targetPort: 8080
  selector:
   app: jira
